--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -14,11 +14,14 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "sass": "^1.79.5",
+    "vite": "^5.4.9",
+    "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.4",
-    "vite": "^5.4.9"
+    "@vitejs/plugin-vue": "^5.1.4"
   }
 }
